# sonic-swss

cfgmgr/: Makefile.am
orchagent/: Makefile.am  orch.cpp  swssstats.cpp  swssstats.h
orchagent/p4orch/tests/: Makefile.am
tests/mock_tests/: Makefile.am  swssstats_ut.cpp
